crates/native/tests/snapshots/parser_tests__inline_fragment.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"query { search { ... on User { name } } }\")"
---
Document {
    source: Source {
        code: "query { search { ... on User { name } } }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 41,
                    },
                    operation_type: Query,
                    name: None,
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 8,
                                        end: 39,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "search",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            InlineFragment(
                                                InlineFragment {
                                                    span: Span {
                                                        start: 17,
                                                        end: 37,
                                                    },
                                                    type_condition: Some(
                                                        TypeName(
                                                            Name(
                                                                "User",
                                                            ),
                                                        ),
                                                    ),
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [
                                                            Field(
                                                                Field {
                                                                    span: Span {
                                                                        start: 31,
                                                                        end: 37,
                                                                    },
                                                                    alias: None,
                                                                    name: FieldName(
                                                                        Name(
                                                                            "name",
                                                                        ),
                                                                    ),
                                                                    arguments: [],
                                                                    directives: [],
                                                                    selection_set: SelectionSet {
                                                                        selections: [],
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
