crates/native/tests/snapshots/parser_tests__inline_fragment_with_keyword_type_condition.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"query { node { ... on Query { name } } }\")"
---
Document {
    source: Source {
        code: "query { node { ... on Query { name } } }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 40,
                    },
                    operation_type: Query,
                    name: None,
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 8,
                                        end: 38,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "node",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            InlineFragment(
                                                InlineFragment {
                                                    span: Span {
                                                        start: 15,
                                                        end: 36,
                                                    },
                                                    type_condition: Some(
                                                        TypeName(
                                                            Name(
                                                                "Query",
                                                            ),
                                                        ),
                                                    ),
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [
                                                            Field(
                                                                Field {
                                                                    span: Span {
                                                                        start: 30,
                                                                        end: 36,
                                                                    },
                                                                    alias: None,
                                                                    name: FieldName(
                                                                        Name(
                                                                            "name",
                                                                        ),
                                                                    ),
                                                                    arguments: [],
                                                                    directives: [],
                                                                    selection_set: SelectionSet {
                                                                        selections: [],
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
