crates/native/tests/snapshots/parser_tests__interface_with_fields.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"interface Node { id: ID! createdAt: String! }\")"
---
Document {
    source: Source {
        code: "interface Node { id: ID! createdAt: String! }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        TypeSystem(
            Type(
                Interface(
                    InterfaceTypeDefinition {
                        description: None,
                        name: TypeName(
                            Name(
                                "Node",
                            ),
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: FieldName(
                                    Name(
                                        "id",
                                    ),
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: TypeName(
                                                Name(
                                                    "ID",
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                            FieldDefinition {
                                description: None,
                                name: FieldName(
                                    Name(
                                        "createdAt",
                                    ),
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: TypeName(
                                                Name(
                                                    "String",
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
